@@ -14,9 +14,8 @@
 #include <stdio.h>
 #include <stdlib.h>
 #include <vector>
-//extern "C" {
-  #include "../contrib/legendre_rule_fast.h"
-//}
+#include "../contrib/legendre_rule_fast.h"
+
 using namespace std;
 using namespace finufft;
 using namespace finufft::utils;
